# vina

./: CMakeLists.txt  README.md  cppcheck_report.txt  flawfinder_report.html
.github/workflows/: Code-Check.yaml  Ubuntu-Binary.yaml  flaw-finder.yaml  macOS-Binary.yaml
app/: CMakeLists.txt  main.cpp
in/include/: quaternion.h
source/: CMakeLists.txt
src/lib/: parallel_progress.h
src/split/: split.cpp
